k8s/manifests/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-nginx
  namespace: fortinet
  labels:
    app: debug
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: debug-service
  namespace: fortinet
spec:
  type: NodePort
  selector:
    app: debug
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30999
    protocol: TCP
    name: http
