k8s/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortinet-ingress
  namespace: fortinet
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"

spec:
  rules:
  - host: fortinet.jclee.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fortinet-service
            port:
              number: 7777
